# InsureAI

./: .env.example  .gitignore  AWS_EKS_DEPLOYMENT_GUIDE.md  CLAUDE.md  Challenges.md  DEPLOYMENT_ISSUES_AND_SOLUTIONS.md  Dockerfile  K8S_DEPLOYMENT_CHECKLIST.md  PHASE3_PROGRESS.md  PORTS.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
Project_Documentation/: AI_Challenges_and_Solutions.md  Approach_and_Phases.md  Deployment_Issues_and_Solutions.md  Improvements_ToDo.txt  K8s_Deployment_Checklist.md
alembic/: env.py
alembic/versions/: 20241102_0002_resize_embedding_vector.py  20241103_0003_customers_policies_claims.py
backend/: __init__.py  alembic.ini  main.py  run.py
backend/alembic/: env.py
backend/database/: connection.py  models.py
backend/engine/: progress_tracker.py
backend/scripts/: check_db.py  run_ingestion.py  seed_brokers.py  seed_data.py
backend/tests/: conftest.py
database/: __init__.py  connection.py  database_schema.sql  health_check_db.py  init_schema.py  models.py
database/admin/: README.md  check_db.py  db_creation.py  seed_brokers.py  seed_data.py  tables.py
database/dev/: run_ingestion.py
deployment/: Dockerfile  docker-compose.yml  start_api.bat
docs/Q&A/: 01-general.md  02-architecture.md  03-document-ingestion-agent.md  04-claims-history-agent.md  05-hazard-evaluation-agent.md  06-underwriting-risk-agent.md  07-human-in-the-loop.md  08-pricing-agent.md  09-governance-agent.md  10-orchestration.md  11-security.md  12-compliance-agent.md  13-cost-tracking.md  14-observability.md
docs/architecture/: end-to-end-flow.md
evals/: run_evals.py
frontend/: cost_dashboard.py  start_streamlit.bat  streamlit_app.py  underwriter_portal.py
k8s/: api-deployment.yaml  configmap.yaml  namespace.yaml  postgres-statefulset.yaml  secret.yaml.example  streamlit-deployment.yaml
prompts/: README.md
prompts/claims_history_agent/: v1.0.md
prompts/compliance_agent/: v1.0.md
prompts/document_ingestion_agent/: v1.0.md
prompts/governance_agent/: v1.0.md
prompts/hazard_evaluation_agent/: v1.0.md
prompts/pricing_agent/: v1.0.md
prompts/underwriting_risk_agent/: v1.0.md
sample_broker_files/: README.md
sample_broker_files/documents/: clean_auto_approve.txt  decline_missing_fields.txt  decline_prompt_injection.txt  referral_hazard_zone.txt  referral_large_claim.txt  referral_more_claims.txt  referral_sum_insured.txt
samples/documents/: property_submission_harbour_fresh.txt  property_submission_high_risk.txt  property_submission_missing_fields.txt  property_submission_prompt_injection.txt
scripts/: run_ingestion.py  seed_data.py
system_prompts/agent_prompts/: README.md
system_prompts_config/claims_history_agent/: v1.0.md
system_prompts_config/governance_agent/: v1.0.md
system_prompts_config/underwriting_risk_agent/: v1.0.md
tests/: conftest.py
tests/api/: test_e2e_pipeline.py  test_health.py  test_pipeline.py  test_submissions.py
tests/manual/: README.md  run_ingestion.py  test_broker_api.py
tests/pipeline/: test_schemas.py
(+130 files in other folders)
