[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbe-ai-underwriting"
version = "0.1.0"
description = "Enterprise multi-agent AI underwriting system"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "langgraph>=1.1.10,<2.0.0",
    "langgraph-checkpoint-postgres>=3.0.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pgvector>=0.3.0,<1.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "psycopg[binary]>=3.3.4,<4.0.0",
    "psycopg-pool>=3.3.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/src/underwriting"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["backend/tests"]
pythonpath = ["backend/src", "."]
